# capisce

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  action_ex.smt2  example.md  existentials.md  functions.md  inference.tex  logics.md  nat.md  nat_det_fwd1.smt2  notes_bug.md  notes_bug.txt  popl-rebuttal.md  quantifiers.md  semantics.md  totality.smt2
benchmarks/: .gitignore  Makefile  README.md  fabric_1_1  fabric_no_consts_exact_only.p4i  good_trace.ctf  icecap.opam  list.opam  out.json  out.tex  perf_trace.ctf  plotter.py  run  runner.sh  simple_nat.p4  skip.sh  store.py  switch_compiled  testbf4.sh  time.py  timebf4.sh  totex.py  trace.ctf
benchmarks/data/: cvc4_new.csv  determined_forwarding.csv  joins.csv  ternary_explosion.csv
benchmarks/examples/: simple_nat.p4
benchmarks/fabric_cpis/: slice_1_0  slice_1_1  slice_700_0  slice_700_1  slice_700_10  slice_700_100  slice_700_101  slice_700_102  slice_700_103  slice_700_104  slice_700_105  slice_700_106  slice_700_107  slice_700_108  slice_700_11  slice_700_110  slice_700_111  slice_700_112  slice_700_113  slice_700_114  slice_700_115  slice_700_116  slice_700_119  slice_700_12  slice_700_120  slice_700_121  slice_700_123  slice_700_124  slice_700_125  slice_700_126  slice_700_127  slice_700_130  slice_700_131  slice_700_132  slice_700_135  slice_700_136  slice_700_139  slice_700_140  slice_700_143  slice_700_144  (+391 more)
benchmarks/lib/: ASTs.ml  BExpr.ml  BExpr.mli  Bench.ml  BottomUpQe.ml  Breakpoint.ml  CFG.ml  Clock.ml  Cmd.ml  Cmd.mli  Cmd_intf.ml  Compiler.ml  Context.ml  Context.mli  Debug.ml  DependentTypeChecker.ml  Expr.ml  Expr.mli  Facts.ml  Facts.mli  FileIO.ml  Generator.ml  Generator.mli  Info.ml  Log.ml  Log.mli  Micro.ml  MicroExamples.ml  Model.ml  Model.mli  ModelEnum.ml  Monitor.ml  NameGen.ml  NameGen.mli  Nat.ml  P4Parse.ml  PredAbstract.ml  Primitives.ml  Qe.ml  RandomBag.ml  (+25 more)
benchmarks/programs/: Arp.ml  ECMP.ml  Fabric.ml  Flowlet.ml  HeavyHitter1.ml  HeavyHitter2.ml  Hula.ml  Linearroad.ml  MCNat.ml  Multiprotocol.ml  NDPRouter.ml  NetChain.ml  NetpaxosAcceptor.ml  Resubmit.ml  SimpleNat.ml  TSSwitching.ml  V1ModelUtils.ml  dune
benchmarks/raw_ptf_runtime/: fabric_arp_broadcast_tagged_test.p4rt  fabric_arp_broadcast_untagged_test.p4rt  fabric_arp_packetin_test.p4rt  fabric_double_vlan_xconnect_test_0.p4rt  fabric_double_vlan_xconnect_test_1.p4rt  fabric_ipv4_do_not_override_infra_test_0.p4rt  fabric_ipv4_do_not_override_infra_test_2.p4rt  fabric_ipv4_mpls_donot_override_0.p4rt  fabric_ipv4_mpls_donot_override_1.p4rt  fabric_ipv4_mpls_donot_override_2.p4rt  fabric_ipv4_mpls_donot_override_5.p4rt  fabric_ipv4_mpls_group_test0.p4rt  fabric_ipv4_mpls_group_test2.p4rt  fabric_ipv4_mpls_group_test4.p4rt  fabric_ipv4_mpls_group_test5.p4rt  fabric_ipv4_mpls_override_edge_test_0.p4rt  fabric_ipv4_mpls_override_edge_test_1.p4rt  fabric_ipv4_mpls_override_edge_test_2.p4rt  fabric_ipv4_unicast_acl_outer_drop_test.p4rt  fabric_ipv4_unicast_from_packet_out_test1.p4rt  fabric_ipv4_unicast_from_packet_out_test2.p4rt  fabric_ipv4_unicast_from_packet_out_test4.p4rt  fabric_ipv4_unicast_from_packet_out_test5.p4rt  fabric_ipv4_unicast_group_test.p4rt  fabric_ipv4_unicast_group_test_all_port_ipdst_test1.p4rt  fabric_ipv4_unicast_group_test_all_port_ipsrc_test0.ml  fabric_ipv4_unicast_group_test_all_port_ipsrc_test1.ml  fabric_ipv4_unicast_gtp_acl_inner_drop_test.p4rt  fabric_ipv4_unicast_gtp_test.p4rt  fabric_ipv4_unicast_test10.p4rt  fabric_ipv4_unicast_test3.p4rt  fabric_ipv4_unicast_test4.p4rt  fabric_ipv4_unicast_test5.p4rt  fabric_ipv4_unicast_test6.p4rt  fabric_ipv4_unicast_test8.p4rt  fabric_mpls_segment_routing_test0.p4rt  fabric_mpls_segment_routing_test2.p4rt  fabric_mpls_segment_routing_test3.p4rt  fabric_mpls_segment_routing_test5.p4rt  fabric_mpls_segment_routing_test6.p4rt  (+1 more)
benchmarks/scripts/: clean_p4rt.sh  clean_slices.sh  graphs.py  heavy-hitter-nodes.py  install.sh  parallelize.sh  paths.py  recompute.sh  survey.py  survey.sh  survey_tex.sh  survey_to_tex.py
benchmarks/test/: Algorithms.ml  ArpTest.ml  Cmd.ml  Dependent.ml  ECMPTest.ml  Equivalences.ml  FabricInfo.ml  FabricTest.ml  FlowletTest.ml  HeavyHitter1Test.ml  HeavyHitter2Test.ml  HulaTest.ml  LinearroadTest.ml  MCNatTest.ml  MonitorTest.ml  MultiprotocolTest.ml  NDPRouterTest.ml  NetChainTest.ml  NetpaxosAcceptorTest.ml  Optimizer.ml  PTFFabricArpBroadcastTaggedTest.ml  PTFFabricArpBroadcastUntaggedTest.ml  PTFFabricArpPacketOutTest.ml  PTFFabricDoubleVlanXConnectTest.ml  PTFFabricIPv4DefaultRouteTest.ml  PTFFabricIPv4DoNotOverrideInfraTest.ml  PTFFabricIPv4MplsDoNotOverrideTest.ml  PTFFabricIPv4UnicastGroupTest.ml  PTFFabricIPv4UnicastGroupTestAllPortIpDst.ml  PTFFabricIPv4UnicastTest.ml  PTFFabricLongIpPacketInTest.ml  PTFFabricLongIpPacketOutTest.ml  PTFFabricMplsSegmentRoutingTest.ml  PTFFabricTaggedPacketInTest.ml  PTFIPv4MplsGroupTest.ml  Parser.ml  Qe.ml  ResubmitTest.ml  Runtime.ml  SimpleNatTest.ml  (+8 more)
capisce/: .gitignore  Makefile  capisce.opam  df.tex  dune-project  hv.tex  icecap.opam  unskip.sh
capisce/data/: bf4-df.csv  bf4-hv.csv  cvc4.csv  cvc4_simplified_new.csv  cvc4_smart.csv  netpaxos_acceptor_cegps_time  ternary_explosion_encapsulation.csv
capisce/examples/: fabric-generated.p4
capisce/lib/: ASTs.ml  ASTs.mli  BExpr.ml  BExpr.mli  Cmd.ml  Cmd.mli  Context.mli  DependentTypeChecker.ml  EmitP4.ml  Expr.ml  Expr.mli  GCLInterp.ml  Generator.ml  Log.ml  Micro.ml  Model.ml  Monitor.ml  NameGen.mli  PredAbstract.mli  Primitives.ml  Primitives.mli  Qe.ml  Qe.mli  Smt.ml  Smt.mli  SmtAst.ml  SmtParser.ml  Solver.ml  Table.ml  Transform.ml  TypeContext.ml  TypeContext.mli  dune  lexer.mll  parser.mly
capisce/log_hv/: 07-multiprotocol  arp  ecmp  flowlet  flowlet-fixed  heavy-hitter-1  heavy-hitter-2  heavy-hitter-2-fixed  hula-fixed  mc-nat  mc-nat-fixed  ndp-router  netpaxos-acceptor  resubmit  ts-switching  ts-switching-fixed
capisce/programs/: Arp.ml  ECMP.ml  Fabric.ml  Flowlet.ml  HeavyHitter1.ml  HeavyHitter2.ml  Hula.ml  Linearroad.ml  MCNat.ml  Multiprotocol.ml  NDPRouter.ml  NetChain.ml  PaperExample.ml  (+6 more)
(+246 files in other folders)
