opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "ocaml.4.11.1"
  "ocaml-base-compiler.4.11.1"
  "ocaml-config.1"
]
roots: [
  "alcotest.1.5.0"
  "ANSITerminal.0.8.3"
  "coq.8.13.2"
  "coq-equations.1.3+8.13"
  "coq-hammer.1.3.2+8.13"
  "coq-paco.4.1.1"
  "core.v0.14.1"
  "cstruct-sexp.6.0.1"
  "fmt.0.9.0"
  "js_of_ocaml-lwt.3.11.0"
  "js_of_ocaml-ppx.3.11.0"
  "logs.0.7.0"
  "menhir.20211128"
  "merlin.4.4-411"
  "ocaml-base-compiler.4.11.1"
  "p4pp.0.1.6"
  "poulet4.0.1.0"
  "poulet4_Ccomp.0.1.0"
  "pp.1.1.2"
  "ppx_deriving_yojson.3.6.1"
  "ppx_import.1.8.0"
  "z3.4.8.11"
]
installed: [
  "alcotest.1.5.0"
  "ANSITerminal.0.8.3"
  "astring.0.8.5"
  "base.v0.14.2"
  "base-bigarray.base"
  "base-bytes.base"
  "base-threads.base"
  "base-unix.base"
  "base_bigstring.v0.14.0"
  "base_quickcheck.v0.14.0"
  "bigarray-compat.1.0.0"
  "bignum.v0.14.0"
  "bin_prot.v0.14.0"
  "biniou.1.2.1"
  "cmdliner.1.0.4"
  "conf-findutils.1"
  "conf-g++.1.0"
  "conf-gmp.3"
  "conf-m4.1"
  "conf-perl.1"
  "conf-python-2-7.1.2"
  "coq.8.13.2"
  "coq-compcert.3.9"
  "coq-equations.1.3+8.13"
  "coq-flocq.3.4.2"
  "coq-hammer.1.3.2+8.13"
  "coq-hammer-tactics.1.3.2+8.13"
  "coq-menhirlib.20211128"
  "coq-paco.4.1.1"
  "coq-record-update.0.3.0"
  "core.v0.14.1"
  "core_kernel.v0.14.1"
  "cppo.1.6.8"
  "csexp.1.5.1"
  "cstruct.6.0.1"
  "cstruct-sexp.6.0.1"
  "dot-merlin-reader.4.1"
  "dune.2.9.1"
  "dune-configurator.2.9.1"
  "easy-format.1.3.2"
  "fieldslib.v0.14.0"
  "fmt.0.9.0"
  "jane-street-headers.v0.14.0"
  "js_of_ocaml.3.11.0"
  "js_of_ocaml-compiler.3.11.0"
  "js_of_ocaml-lwt.3.11.0"
  "js_of_ocaml-ppx.3.11.0"
  "jst-config.v0.14.1"
  "logs.0.7.0"
  "lwt.5.5.0"
  "menhir.20211128"
  "menhirLib.20211128"
  "menhirSdk.20211128"
  "merlin.4.4-411"
  "mmap.1.1.0"
  "num.1.4"
  "ocaml.4.11.1"
  "ocaml-base-compiler.4.11.1"
  "ocaml-compiler-libs.v0.12.4"
  "ocaml-config.1"
  "ocaml-migrate-parsetree.1.8.0"
  "ocaml-syntax-shims.1.0.0"
  "ocamlbuild.0.14.0"
  "ocamlfind.1.9.1"
  "ocplib-endian.1.2"
  "octavius.1.2.2"
  "p4pp.0.1.6"
  "parsexp.v0.14.1"
  "poulet4.0.1.0"
  "poulet4_Ccomp.0.1.0"
  "pp.1.1.2"
  "ppx_assert.v0.14.0"
  "ppx_base.v0.14.0"
  "ppx_bench.v0.14.1"
  "ppx_bin_prot.v0.14.0"
  "ppx_cold.v0.14.0"
  "ppx_compare.v0.14.0"
  "ppx_custom_printf.v0.14.0"
  "ppx_derivers.1.2.1"
  "ppx_deriving.5.1"
  "ppx_deriving_yojson.3.6.1"
  "ppx_enumerate.v0.14.0"
  "ppx_expect.v0.14.0"
  "ppx_fields_conv.v0.14.1"
  "ppx_fixed_literal.v0.14.0"
  "ppx_hash.v0.14.0"
  "ppx_here.v0.14.0"
  "ppx_import.1.8.0"
  "ppx_inline_test.v0.14.1"
  "ppx_jane.v0.14.0"
  "ppx_js_style.v0.14.1"
  "ppx_let.v0.14.0"
  "ppx_module_timer.v0.14.0"
  "ppx_optcomp.v0.14.0"
  "ppx_optional.v0.14.0"
  "ppx_pipebang.v0.14.0"
  "ppx_sexp_conv.v0.14.1"
  "ppx_sexp_message.v0.14.0"
  "ppx_sexp_value.v0.14.0"
  "ppx_stable.v0.14.1"
  "ppx_string.v0.14.1"
  "ppx_tools_versioned.5.4.0"
  "ppx_typerep_conv.v0.14.1"
  "ppx_variants_conv.v0.14.1"
  "ppxlib.0.15.0"
  "re.1.10.3"
  "result.1.5"
  "seq.base"
  "sexplib.v0.14.0"
  "sexplib0.v0.14.0"
  "spawn.v0.14.0"
  "splittable_random.v0.14.0"
  "stdio.v0.14.0"
  "stdlib-shims.0.3.0"
  "time_now.v0.14.0"
  "timezone.v0.14.0"
  "topkg.1.0.4"
  "typerep.v0.14.0"
  "uchar.0.0.2"
  "uuidm.0.9.7"
  "uutf.1.0.2"
  "variantslib.v0.14.0"
  "yojson.1.7.0"
  "z3.4.8.11"
  "zarith.1.12"
  "zarith_stubs_js.v0.14.1"
]
pinned: ["p4pp.0.1.6" "poulet4.0.1.0" "poulet4_Ccomp.0.1.0"]
package "p4pp" {
  opam-version: "2.0"
  version: "0.1.6"
  synopsis: "P4PP: Preprocessor for P4 Language"
  maintainer: "jnfoster@cs.cornell.edu"
  authors: "Nate Foster <jnfoster@cs.cornell.edu>"
  license: "Apache-2.0"
  homepage: "https://github.com/cornell-netlab/p4pp"
  bug-reports: "https://github.com/cornell-netlab/p4pp/issues"
  depends: [
    "ocaml" {>= "4.09.0"}
    "dune" {>= "1.2"}
    "menhir"
    "core" {>= "v0.13.0"}
  ]
  build: [
    ["dune" "subst"] {pinned}
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
    ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ]
  dev-repo: "git+https://github.com/cornell-netlab/p4pp/"
  url {
    src: "git+file:///home/ericthewry/Downloads/p4pp#master"
  }
}
package "poulet4" {
  opam-version: "2.0"
  version: "0.1.0"
  synopsis: "Poulet4: Petr4 in Coq"
  maintainer: "jnfoster@cs.cornell.edu"
  authors: "Nate Foster <jnfoster@cs.cornell.edu>"
  homepage: "https://github.com/cornell-netlab/petr4"
  bug-reports: "https://github.com/cornell-netlab/petr4/issues"
  depends: [
    "bignum"
    "dune" {build}
    "coq" {build}
    "coq-equations" {build}
    "coq-record-update" {build}
    "coq-compcert" {build}
  ]
  build: ["dune" "build" "-p" name "-j" jobs "@install"]
  install: ["dune" "install" "-p" name]
  dev-repo: "git+https://github.com/cornell-netlab/petr4/"
  url {
    src: "file:///home/ericthewry/petr4-dev/deps/poulet4"
  }
}
package "poulet4_Ccomp" {
  opam-version: "2.0"
  version: "0.1.0"
  synopsis: "Poulet4-Ccompiler: P4 to C Compiler in Coq"
  maintainer: "jnfoster@cs.cornell.edu"
  authors: "Nate Foster <jnfoster@cs.cornell.edu>"
  homepage: "https://github.com/cornell-netlab/petr4"
  bug-reports: "https://github.com/cornell-netlab/petr4/issues"
  depends: [
    "bignum"
    "poulet4"
    "zarith"
    "coq-compcert"
    "coq" {build}
    "coq-equations" {build}
  ]
  build: ["dune" "build" "-p" name "-j" jobs "@install"]
  install: ["dune" "install" "-p" name]
  dev-repo: "git+https://github.com/cornell-netlab/petr4/"
  url {
    src: "file:///home/ericthewry/petr4-dev/deps/poulet4_Ccomp/extraction"
  }
}
