opam-version: "2.0"
name: "icecap"
version: "0.1"
synopsis: "infer control plane specifications from p4 programs"
description: ""
maintainer: "Eric Campbell <ehc86@cornell.edu>"
authors: "Eric Campbell <ehc86@cornell.edu>"
license: "MIT"
homepage: "https://ericthewry.github.io"
depends: [
  "core"
  "core_unix"
  "bignum"
  "ANSITerminal"
  "hashcons"
  "ppx_jane"
  "ppx_inline_test"
  "ppx_deriving_yojson"
  "ppx_deriving"
  "memtrace"
]
